@@ -125,7 +125,7 @@ fi
 if test x"$host_os" = "xminix"; then
   AC_DEFINE(MINIX_SUPPORT,,[do we need minix support])
   CFLAGS="$CFLAGS -D_MINIX -D_POSIX_SOURCE"
-  MINIX_RELEASE=`uname -s`
+  MINIX_RELEASE=`uname -r`
   MINIX_VERSION=`uname -v`
   if test x"$MINIX_RELEASE" != "x3"; then
     AC_MSG_ERROR([VICE works only on minix 3 and up])
